--- a/utils/templates/emacs.el.template
+++ b/utils/templates/emacs.el.template
@@ -28,24 +28,24 @@
 
  (deftheme !!COL!{name}!)
  (let ((class '((class color) (min-colors 89)))
-       (fg1      "#b9b9b9")
-       (fg2      "#aaaaaa")
-       (fg3      "#9b9b9b")
-       (fg4      "#8d8d8d")
-       (bg1      "#181818")
-       (bg2      "#2a2a2a")
-       (bg3      "#3d3d3d")
-       (bg4      "#4f4f4f")
-       (builtin  "#3fc5b7")
-       (keyword  "#dbb32d")
-       (const    "#eb6eb7")
-       (comment  "#777777")
-       (func     "#70b433")
-       (str      "#368aeb")
-       (type     "#a580e2")
-       (var      "#b9b9b9")
-       (warning  "#ed4a46")
-       (warning2 "#e67f43"))
+       (fg1      !!COL!{fg.srgb}!"#b9b9b9")
+       (fg2      !!COL!{.srgb}!"#aaaaaa")
+       (fg3      !!COL!{.srgb}!"#9b9b9b")
+       (fg4      !!COL!{.srgb}!"#8d8d8d")
+       (bg1      !!COL!{.srgb}!"#181818")
+       (bg2      !!COL!{.srgb}!"#2a2a2a")
+       (bg3      !!COL!{.srgb}!"#3d3d3d")
+       (bg4      !!COL!{.srgb}!"#4f4f4f")
+       (builtin  !!COL!{.srgb}!"#3fc5b7")
+       (keyword  !!COL!{.srgb}!"#dbb32d")
+       (const    !!COL!{.srgb}!"#eb6eb7")
+       (comment  !!COL!{.srgb}!"#777777")
+       (func     !!COL!{.srgb}!"#70b433")
+       (str      !!COL!{.srgb}!"#368aeb")
+       (type     !!COL!{.srgb}!"#a580e2")
+       (var      !!COL!{.srgb}!"#b9b9b9")
+       (warning  !!COL!{.srgb}!"#ed4a46")
+       (warning2 !!COL!{.srgb}!"#e67f43"))
    (custom-theme-set-faces
    '!!COL!{name}!
         `(default ((,class (:background ,bg1 :foreground ,fg1))))
