--- a/utils/templates/ace.template
+++ b/utils/templates/ace.template
@@ -9,18 +9,18 @@
 }
 
 .ace-solarized-dark {
-  background-color: !!COL{bg.srgb}!;
-  color: !!COL{fg.srgb}!
+  background-color: !!COL!{bg.srgb}!;
+  color: !!COL!{fg.srgb}!
 }
 
 .ace-solarized-dark .ace_entity.ace_other.ace_attribute-name,
 .ace-solarized-dark .ace_storage {
-  color: !!COL{fg.srgb}!
+  color: !!COL!{fg.srgb}!
 }
 
 .ace-solarized-dark .ace_cursor,
 .ace-solarized-dark .ace_string.ace_regexp {
-  color: !!COL{red.srgb}!
+  color: !!COL!{red.srgb}!
 }
 
 .ace-solarized-dark .ace_marker-layer .ace_active-line,
@@ -29,11 +29,11 @@
 }
 
 .ace-solarized-dark.ace_multiselect .ace_selection.ace_start {
-  box-shadow: 0 0 3px 0px !!COL{bg.srgb}!;
+  box-shadow: 0 0 3px 0px !!COL!{bg.srgb}!;
 }
 
 .ace-solarized-dark .ace_marker-layer .ace_step {
-  background: !!COL{green.srgb}!
+  background: !!COL!{green.srgb}!
 }
 
 .ace-solarized-dark .ace_marker-layer .ace_bracket {
@@ -42,11 +42,11 @@
 }
 
 .ace-solarized-dark .ace_gutter-active-line {
-  background-color: !!COL{br_black.srgb}!
+  background-color: !!COL!{br_black.srgb}!
 }
 
 .ace-solarized-dark .ace_marker-layer .ace_selected-word {
-  border: 1px solid !!COL{black.srgb}!
+  border: 1px solid !!COL!{black.srgb}!
 }
 
 .ace-solarized-dark .ace_invisible {
@@ -57,25 +57,25 @@
 .ace-solarized-dark .ace_meta,
 .ace-solarized-dark .ace_support.ace_class,
 .ace-solarized-dark .ace_support.ace_type {
-  color: !!COL{green.srgb}!
+  color: !!COL!{green.srgb}!
 }
 
 .ace-solarized-dark .ace_constant.ace_character,
 .ace-solarized-dark .ace_constant.ace_other {
-  color: !!COL{orange.srgb}!
+  color: !!COL!{orange.srgb}!
 }
 
 .ace-solarized-dark .ace_constant.ace_language {
-  color: !!COL{yellow.srgb}!
+  color: !!COL!{yellow.srgb}!
 }
 
 .ace-solarized-dark .ace_constant.ace_numeric {
-  color: !!COL{magenta.srgb}!
+  color: !!COL!{magenta.srgb}!
 }
 
 .ace-solarized-dark .ace_fold {
-  background-color: !!COL{blue.srgb}!
-  border-color: !!COL{fg.srgb}!
+  background-color: !!COL!{blue.srgb}!
+  border-color: !!COL!{fg.srgb}!
 }
 
 .ace-solarized-dark .ace_entity.ace_name.ace_function,
@@ -83,16 +83,16 @@
 .ace-solarized-dark .ace_support.ace_function,
 .ace-solarized-dark .ace_variable,
 .ace-solarized-dark .ace_variable.ace_language {
-  color: !!COL{blue.srgb}!
+  color: !!COL!{blue.srgb}!
 }
 
 .ace-solarized-dark .ace_string {
-  color: !!COL{cyan.srgb}!
+  color: !!COL!{cyan.srgb}!
 }
 
 .ace-solarized-dark .ace_comment {
   font-style: italic;
-  color: !!COL{white.srgb}!
+  color: !!COL!{white.srgb}!
 }
 
 .ace-solarized-dark .ace_indent-guide {
